--- a/docs/parser_plan/3. simplify (tech plan).md
+++ b/docs/parser_plan/3. simplify (tech plan).md
@@ -273,100 +273,222 @@ Create the views for the cross-dock functionality:
 
 ```python
 # cross_dock/views.py
-from django.http import JsonResponse
-from django.views.decorators.csrf import csrf_exempt
-from django.views.decorators.http import require_POST
-from django.utils.decorators import method_decorator
+from django.shortcuts import render, get_object_or_404
+from django.http import HttpResponse
 from django.views import View
-import json
 from .tasks import generate_cross_dock_excel
 from .models import CrossDockTask
-from common.decorators import require_api_key
+import json
 import logging
 
 logger = logging.getLogger(__name__)
 
-@method_decorator(csrf_exempt, name='dispatch')
-@method_decorator(require_api_key, name='dispatch')
-class CrossDockView(View):
-    """View for starting cross-dock tasks and checking their status."""
-    
-    @method_decorator(require_POST)
-    def post(self, request):
-        """Start a new cross-dock task."""
+def index(request):
+    """Main cross-dock page with form."""
+    return render(request, "cross_dock/index.html")
+
+def create_task(request):
+    """Handle form submission and create a new task."""
+    if request.method == "POST":
         try:
-            # Parse request data
-            data = json.loads(request.body)
+            # Extract data from form
+            input_data = {
+                "brands": request.POST.getlist("brands"),
+                "articles": request.POST.getlist("articles"),
+                "region": request.POST.get("region"),
+                "include_all_suppliers": request.POST.get("include_all_suppliers") == "on"
+            }
             
-            # Prepare task parameters
+            platforms = {
+                "emex": request.POST.get("platform_emex") == "on",
+                "autopiter": request.POST.get("platform_autopiter") == "on",
+                "exist": request.POST.get("platform_exist") == "on",
+                "part_kom": request.POST.get("platform_part_kom") == "on"
+            }
+            
+            filename = request.POST.get("filename", "")
+            
+            # Create task parameters
             task_params = {
-                'source_type': 'percentage_cross',
-                'data': data['data'],
-                'platforms': data['platforms'],
-                'filename': data.get('filename', ''),
-                'auto': data.get('auto', 'false')
+                "data": input_data,
+                "platforms": platforms,
+                "filename": filename
             }
             
             # Start Celery task
             task = generate_cross_dock_excel.delay(task_params)
             
-            return JsonResponse({"task_id": str(task.id)}, status=202)
-        
+            # Create task record
+            CrossDockTask.objects.create(
+                id=task.id,
+                input_data=input_data,
+                platforms=platforms,
+                filename=filename
+            )
+            
+            # Return task status partial
+            return render(request, "cross_dock/partials/task_status.html", {
+                "task_id": task.id
+            })
+            
         except Exception as e:
-            logger.exception(f"Error starting cross-dock task: {e}")
-            return JsonResponse({"error": str(e)}, status=500)
+            logger.exception(f"Error creating cross-dock task: {e}")
+            return render(request, "cross_dock/partials/error.html", {
+                "error": str(e)
+            })
     
-    def get(self, request):
-        """Get status of cross-dock tasks."""
-        try:
-            # Get auto filter parameter
-            auto_value = request.GET.get('auto', 'True')
-            
-            # Query tasks
-            tasks = CrossDockTask.objects.all().order_by('-created_at')
-            
-            # Filter by auto if needed
-            if auto_value.lower() == 'true':
-                tasks = tasks.filter(input_data__auto='true')
-            elif auto_value.lower() == 'false':
-                tasks = tasks.filter(input_data__auto='false')
-            
-            # Format response
-            response = {}
-            for task in tasks:
-                response[str(task.id)] = {
-                    'status': task.status,
-                    'progress': '100%' if task.status == 'SUCCESS' else '0%',
-                    'url': task.result_url or '',
-                    'created_at': task.created_at.isoformat(),
-                    'filename': task.filename
-                }
-            
-            return JsonResponse(response)
-        
-        except Exception as e:
-            logger.exception(f"Error fetching cross-dock tasks: {e}")
-            return JsonResponse({"error": str(e)}, status=500)
+    # If not POST, redirect to index
+    return HttpResponse(status=400)
+
+def task_status(request, task_id):
+    """Get the current status of a task."""
+    task = get_object_or_404(CrossDockTask, id=task_id)
+    
+    # If task is complete, render with download link
+    if task.status == "SUCCESS":
+        return render(request, "cross_dock/partials/task_complete.html", {
+            "task": task
+        })
+    
+    # If task failed, render error
+    if task.status == "FAILURE":
+        return render(request, "cross_dock/partials/task_failed.html", {
+            "task": task,
+            "error": task.error_message
+        })
+    
+    # Otherwise, render in-progress status with polling
+    return render(request, "cross_dock/partials/task_in_progress.html", {
+        "task": task
+    })
+
+def task_list(request):
+    """Show list of all tasks."""
+    tasks = CrossDockTask.objects.all()
+    return render(request, "cross_dock/task_list.html", {
+        "tasks": tasks
+    })
+
 ```
 
-## 7. URL Configuration
+##
+
+### Template Examples
+
+Here's how the templates would work with HTMX:
+
+**Main Form (index.html)**:
+
+```html
+{% extends "core/layouts/blank.html" %}
+{% block title %}Cross Dock{% endblock %}
+{% block content %}
+<div class="max-w-4xl mx-auto px-8 py-12">
+    <h1 class="text-2xl font-bold mb-6">Cross Dock Query</h1>
+    
+    <form hx-post="{% url 'cross_dock:create_task' %}" 
+          hx-target="#task-status" 
+          hx-swap="innerHTML">
+        
+        <div class="mb-4">
+            <label class="block mb-2">Brands</label>
+            <input type="text" name="brands" class="w-full p-2 border rounded" 
+                   placeholder="Enter brands (comma separated)">
+        </div>
+        
+        <div class="mb-4">
+            <label class="block mb-2">Articles</label>
+            <input type="text" name="articles" class="w-full p-2 border rounded" 
+                   placeholder="Enter articles (comma separated)">
+        </div>
+        
+        <!-- More form fields -->
+        
+        <div class="mb-4">
+            <label class="block mb-2">Platforms</label>
+            <div class="flex space-x-4">
+                <label><input type="checkbox" name="platform_emex" checked> Emex</label>
+                <label><input type="checkbox" name="platform_autopiter" checked> Autopiter</label>
+                <label><input type="checkbox" name="platform_exist"> Exist</label>
+                <label><input type="checkbox" name="platform_part_kom"> Part-Kom</label>
+            </div>
+        </div>
+        
+        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">
+            Start Query
+        </button>
+    </form>
+    
+    <div id="task-status" class="mt-8">
+        <!-- Task status will be loaded here -->
+    </div>
+</div>
+{% endblock %}
+```
+
+## **Task Status Partial (partials/task\_status.html)**:
+
+```html
+<div class="bg-gray-100 p-4 rounded">
+    <h2 class="text-lg font-semibold mb-2">Task Started</h2>
+    <p>Task ID: {{ task_id }}</p>
+    
+    <div hx-get="{% url 'cross_dock:task_status' task_id %}" 
+         hx-trigger="load delay:1s" 
+         hx-swap="outerHTML">
+        <p>Initializing task...</p>
+        <div class="w-full bg-gray-200 rounded-full h-2.5">
+            <div class="bg-blue-600 h-2.5 rounded-full" style="width: 10%"></div>
+        </div>
+    </div>
+</div>
+```
+
+**Task In Progress Partial (partials/task\_in\_progress.html)**:
+
+```html
+<div hx-get="{% url 'cross_dock:task_status' task.id %}" 
+     hx-trigger="every 3s" 
+     hx-swap="outerHTML">
+    <h2 class="text-lg font-semibold mb-2">Processing</h2>
+    <p>Status: {{ task.status }}</p>
+    <div class="w-full bg-gray-200 rounded-full h-2.5">
+        <div class="bg-blue-600 h-2.5 rounded-full" style="width: 50%"></div>
+    </div>
+</div>
+```
+
+**Task Complete Partial (partials/task\_complete.html)**:
+
+```html
+<div class="bg-green-100 p-4 rounded">
+    <h2 class="text-lg font-semibold mb-2">Task Complete</h2>
+    <p>Your cross-dock query has finished successfully!</p>
+    <a href="{{ task.result_url }}" class="bg-green-500 text-white px-4 py-2 rounded inline-block mt-2">
+        Download Results
+    </a>
+</div>
+```
+
+### 7. URL Configuration
 
 Configure the URLs for the cross-dock app:
 
 ```python
 # cross_dock/urls.py
 from django.urls import path
-from .views import CrossDockView
+from . import views
 
-app_name = 'cross_dock'
-
+app_name = "cross_dock"
 urlpatterns = [
-    path('start_percentage_cross/', CrossDockView.as_view(), name='start_percentage_cross'),
-    path('tasks/cross_doc/', CrossDockView.as_view(), name='tasks_cross_doc'),
+    path("", views.index, name="index"),
+    path("create/", views.create_task, name="create_task"),
+    path("status/<uuid:task_id>/", views.task_status, name="task_status"),
+    path("tasks/", views.task_list, name="task_list"),
 ]
 ```
 
-## 8. API Key Authentication
+## 8. API Key Authentication (possibly do not use it)
 
 Create a decorator for API key authentication:
 
@@ -386,7 +508,7 @@ def require_api_key(view_func):
         api_key = request.headers.get('X-API-KEY')
         app_key = request.headers.get('App-Key')
         
-        if api_key != settings.SECRET_KEY:
+        if api_key != settings.DJANGO_SECRET_KEY:
             return JsonResponse({"error": "Invalid API key"}, status=403)
         
         if app_key != settings.CLIENT_APP_KEY_ADMIN:
@@ -405,9 +527,9 @@ Add the necessary settings to your Django settings file:
 # config/django_config/base.py
 
 # ClickHouse settings
-CLICKHOUSE_HOST = '87.242.110.159'
-CLICKHOUSE_USER = 'torgzap_vlastelin'
-CLICKHOUSE_PASSWORD = '5483her!areA@'
++CLICKHOUSE_HOST = os.getenv("CLICKHOUSE_HOST")
++CLICKHOUSE_USER = os.getenv("CLICKHOUSE_USER")
++CLICKHOUSE_PASSWORD = os.getenv("CLICKHOUSE_PASSWORD")
 
 # API authentication
 CLIENT_APP_KEY_ADMIN = 'your-app-key-here'
