chore(pre-commit): add config and hook setup for code formatting and linting

--- a/docs/parser_plan/1. simplify (func list).md
+++ b/docs/parser_plan/1. simplify (func list).md
@@ -3,7 +3,7 @@
 Query:
 
 &#x20;   Our task:
-\- concentrate our attention on functionality that has to do with our future cross-dock app (it starts wtih \`async def start\_percentage\_cross()\` function)
+\- concentrate our attention on functionality that has to do with our future cross-dock app (it starts with \`async def start\_percentage\_cross()\` function)
 \- go through each function in the chain and simplify it to its bear bones. This includes getting rid of any async stuff. Use context from the .md files to figure out what will be used as a separate \`common\` app when assessing the simplification
 
 But before we do it, make a list of all the functions that have to do with this functionality. So, nothing to do with parsing, but everything to do with cross-dock ClickHouse data extraction and creating the excel file.
